--- a/02-Challenge/index.html
+++ b/02-Challenge/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Austin McIntyre's Portfolio</title>
     <link rel="icon" type="image/x-icon" href="https://cdn.shopify.com/s/files/1/1012/9648/files/8391210.gif?3646094131027364212">
     <link rel="stylesheet" href="/Assets/css/style.css">
-
+    <title>Austin McIntyre's Portfolio</title>
   </head>
  
-  <header>
+
+  <body>
+	  <header>
         <h1>Austin's Portfolio</h1>
         <nav>
         <ul>
+            <li href="#">About Me</li>
             <li href="#">LinkedIn</li>
             <li href="#">GitHub</li>
+            <li href="#">Contact</li>
         </ul>
     </nav>
     </header>
   
-  <body>
-	
+
+<div>
+  <p>This is my portfolio</p>
+</div>
 
 
 
+  
 
+  </body>  
+  
+  <footer>
+      <h2>
+        &copy; McIntyre Coding
+      </h2>
 
+    </footer>
 
-
-
-  </body>
 </html>
