added background, boxes and aside

--- a/02-Challenge/index.html
+++ b/02-Challenge/index.html
@@ -1,42 +1,67 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="https://cdn.shopify.com/s/files/1/1012/9648/files/8391210.gif?3646094131027364212">
-    <link rel="stylesheet" href="/Assets/css/style.css">
-    <title>Austin McIntyre's Portfolio</title>
-  </head>
- 
 
-  <body>
-	  <header>
-        <h1>Austin's Portfolio</h1>
-        <nav>
-        <ul>
-            <li href="#">About Me</li>
-            <li href="#">LinkedIn</li>
-            <li href="#">GitHub</li>
-            <li href="#">Contact</li>
-        </ul>
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/x-icon"
+    href="https://cdn.shopify.com/s/files/1/1012/9648/files/8391210.gif?3646094131027364212">
+  <link rel="stylesheet" href="/Assets/css/style.css">
+  <title>Austin McIntyre's Portfolio</title>
+</head>
+
+
+<body>
+
+  <header>
+    <h1>Austin's Portfolio</h1>
+    <nav>
+      <ul>
+        <li>
+          <a href="#">About Me</a>
+        </li>
+        <li>
+          <a href="#">LinkedIn</a>
+        </li>
+        <li>
+          <a href="#">GitHub</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
+      </ul>
     </nav>
-    </header>
-  
+  </header>
 
-<div>
+ <div class="card">
+      <p>This is my portfolio</p>
+</div>
+  <div class="card">   
+    <p>This is my portfolio</p>
+</div>
+<div class="card">   
+  <p>This is my portfolio</p>
+</div>
+<div class="card">   
   <p>This is my portfolio</p>
 </div>
 
+<aside>
+  hi
+</aside>
 
 
+
+
+
+</body>
+
+<footer>
+  <h2>
+    <span id="footleft">Northwestern Coding Bootcamp - Challenge 02</span><span id="footright">  &copy; McIntyre Coding</span>
+  </h2>
+<h3>
   
-
-  </body>  
-  
-  <footer>
-      <h2>
-        &copy; McIntyre Coding
-      </h2>
-
-    </footer>
+</h3>
+</footer>
 
 </html>
