added background gradients

--- a/02-Challenge/index.html
+++ b/02-Challenge/index.html
@@ -32,36 +32,37 @@
     </nav>
   </header>
 
- <div class="card">
+  <main>
+    <div class="card1">
       <p>This is my portfolio</p>
-</div>
-  <div class="card">   
-    <p>This is my portfolio</p>
-</div>
-<div class="card">   
-  <p>This is my portfolio</p>
-</div>
-<div class="card">   
-  <p>This is my portfolio</p>
-</div>
+    </div>
+    <div class="card2">
+      <p>This is my portfolio</p>
+    </div>
+    <div class="card2">
+      <p>This is my portfolio</p>
+    </div>
+    <div class="card1">
+      <p>This is my portfolio</p>
+    </div>
+  </main>
 
-<aside>
-  hi
-</aside>
-
-
-
-
+  <aside>
+    <h1>Quick Access Links</h1>
+    <img src="https://cdn.shopify.com/s/files/1/1012/9648/files/8391210.gif?3646094131027364212" class="crest"
+      height="200px" width="140px" />
+  </aside>
 
 </body>
 
 <footer>
   <h2>
-    <span id="footleft">Northwestern Coding Bootcamp - Challenge 02</span><span id="footright">  &copy; McIntyre Coding</span>
+    <span id="footleft">Northwestern Coding Bootcamp - Challenge 02</span><span id="footright"> &copy; McIntyre
+      Coding</span>
   </h2>
-<h3>
-  
-</h3>
+  <h3>
+
+  </h3>
 </footer>
 
 </html>
