--- a/02-Challenge/index.html
+++ b/02-Challenge/index.html
@@ -13,58 +13,74 @@
 <body>
 
   <header>
-    <h1>Austin's Portfolio</h1>
-    <nav>
-      <ul>
-        <li>
-          <a href="#">About Me</a>
-        </li>
-        <li>
-          <a href="#">LinkedIn</a>
-        </li>
-        <li>
-          <a href="#">GitHub</a>
-        </li>
-        <li>
-          <a href="#">Contact</a>
-        </li>
-      </ul>
-    </nav>
+    <div class="container">
+      <div class="navbar">
+        <h1><span>Austin McIntyre's Portfolio</span></h1>
+        <nav>
+          <ul>
+            <li>
+              <a href="#">About Me</a>
+            </li>
+            <li>
+              <a href="#">My Projects</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <img src="https://cdn.shopify.com/s/files/1/1012/9648/files/8391210.gif?3646094131027364212" class="crest" />
+      </div>
+    </div>
   </header>
 
-  <main>
-    <div class="card1">
-      <p>This is my portfolio</p>
-    </div>
-    <div class="card1">
-      <p>This is my portfolio</p>
-    </div>
-    <div class="card1">
-      <p>This is my portfolio</p>
-    </div>
-    <div class="card1">
-      <p>This is my portfolio</p>
-    </div>
-  </main>
+  <div class="titleImage"></div>
+  
+  <hr>
 
-  <aside>
-    <h1>Quick Access Links</h1>
-    
-    <img src="https://cdn.shopify.com/s/files/1/1012/9648/files/8391210.gif?3646094131027364212" class="crest"
-      height="200px" width="140px"/>
+  <section class="aboutMe">
+    <div class="aboutMe card1">
+      <h1>About Me Placeholder</h1>
+    </div>
+    <div class="aboutMe sidenav">
+      <h2>About Me</h2>
+    </div>
+  </section>
 
-  </aside>
+  <hr>
 
+  <section class="projects">
+    <div class="projects card1">
+      <h1><a href="https://aumcintyre.github.io/Homework-1/">Horiseon Webpage</a></h1>
+    </div>
+    <div class="card2">
+      <p>This is my portfolio</p>
+    </div>
+    <div class="card2">
+      <p>This is my portfolio</p>
+    </div>
+    <div class="card2">
+      <p>This is my portfolio</p>
+    </div>
+    <div class="card2">
+      <p>This is my portfolio</p>
+    </div>
+    <div class="projects sidenav">
+      <h2>My Projects</h2>
+    </div>
+  </section>
+
+  <hr>
+
+  <section class="aboutMe"></section>
+
+  <footer>
+    <h2>
+      &copy; McIntyreCoding
+    </h2>
+  </footer>
 </body>
 
-<footer>
-  <h2>
-    <span id="footleft">Northwestern Coding Bootcamp - Challenge 02</span><span id="footright"> &copy; McIntyre
-      Coding</span>
-  </h2>
-  <h3>
 
-  </h3>
-</footer>
 
 </html>
