added bitmoji to header bar

--- a/02-Challenge/index.html
+++ b/02-Challenge/index.html
@@ -29,7 +29,7 @@
             </li>
           </ul>
         </nav>
-        <img src="https://cdn.shopify.com/s/files/1/1012/9648/files/8391210.gif?3646094131027364212" class="crest" />
+        <img src="/Assets/images/bitmoji-icon.png" class="crest" />
       </div>
     </div>
   </header>
@@ -39,11 +39,12 @@
   <hr>
 
   <section class="aboutMe">
-    <div class="aboutMe card1">
+      <div class="aboutMe card1">
       <h1>About Me Placeholder</h1>
     </div>
     <div class="aboutMe sidenav">
       <h2>About Me</h2>
+
     </div>
   </section>
 
@@ -72,7 +73,6 @@
 
   <hr>
 
-  <section class="aboutMe"></section>
 
   <footer>
     <h2>
