updated colors and hover functions

--- a/02-Challenge/index.html
+++ b/02-Challenge/index.html
@@ -15,7 +15,7 @@
   <header>
     <div class="container">
       <div class="navbar">
-        <h1><span>Austin McIntyre's Portfolio</span></h1>
+        <h1><span>Austin's Coding Spot</span></h1>
         <nav>
           <ul>
             <li>
@@ -51,9 +51,12 @@
   <hr>
 
   <section class="projects">
-    <div class="projects card1">
-      <h1><a href="https://aumcintyre.github.io/Homework-1/">Horiseon Webpage</a></h1>
+
+    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card1">
+      <h2>Horiseon Webpage</h2>
     </div>
+    </a>
+
     <div class="card2">
       <p>This is my portfolio</p>
     </div>
@@ -67,7 +70,7 @@
       <p>This is my portfolio</p>
     </div>
     <div class="projects sidenav">
-      <h2>My Projects</h2>
+      <h3>My Projects</h3>
     </div>
   </section>
 
