--- a/02-Challenge/index.html
+++ b/02-Challenge/index.html
@@ -19,17 +19,17 @@
         <nav>
           <ul>
             <li>
-              <a href="#">About Me</a>
+              <a href="#aboutMe">About Me</a>
             </li>
             <li>
-              <a href="#">My Projects</a>
+              <a href="#projects">My Projects</a>
             </li>
             <li>
               <a href="#">Contact</a>
             </li>
           </ul>
         </nav>
-        <img src="/Assets/images/bitmoji-icon.png" class="crest" />
+        <img src="/Assets/images/bitmoji-icon.png" class="bitmoji" />
       </div>
     </div>
   </header>
@@ -38,9 +38,10 @@
   
   <hr>
 
-  <section class="aboutMe">
+  <section class="aboutMe" id="aboutMe">
       <div class="aboutMe card1">
-      <h1>About Me Placeholder</h1>
+      <h1>Welcome to my portfolio! My name is Austin McIntyre and I'm currently pursuing a change in careers. I am participating in the Northwestern Coding Bootcamp to supplement my own learning as I pursue my end goal of becoming a full-stack web developer. For the time being, I work as a Health/PE Teacher in Chicago, IL. If you would like to get in touch, please see the 'Contact' portion of this page! </h1>
+        <img src="/Assets/images/greetings.png">
     </div>
     <div class="aboutMe sidenav">
       <h2>About Me</h2>
@@ -50,32 +51,59 @@
 
   <hr>
 
-  <section class="projects">
+<!-- PROJECT SECTION -->
+
+  <section class="projects" id="projects">
 
     <a href="https://aumcintyre.github.io/Homework-1/" class="projects card1">
-      <h2>Horiseon Webpage</h2>
+      <h1>Horiseon Webpage</h1>
     </div>
     </a>
+    
+    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card2">
+      <h1>Personal Portfolio</h1>
+    </a>
 
-    <div class="card2">
-      <p>This is my portfolio</p>
-    </div>
-    <div class="card2">
-      <p>This is my portfolio</p>
-    </div>
-    <div class="card2">
-      <p>This is my portfolio</p>
-    </div>
-    <div class="card2">
-      <p>This is my portfolio</p>
-    </div>
+
+    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card3">
+      <h1>RHCP Fan Site</h1>
+    </a>
+
+
+
+    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card4">
+      <h1>Even Par</h1>
+    </a>
+
+
+    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card5">
+      <h1>The Ultimate Survivor</h1>
+    </a>
+
     <div class="projects sidenav">
-      <h3>My Projects</h3>
+      <h2>My Projects</h2>
     </div>
+
+
   </section>
 
   <hr>
 
+  <section class="contact" id="contact">
+    <div class="contact card">
+    <ul>
+      <a href"#"><li>(812) 719-3934</li></a>
+      <a href="mailto:aumcintyre@gmail.com"><li>Email</li></a>
+      <a href"#"><li>LinkedIn</li></a>
+      <a href"#"><li>GitHub</li></a>
+    </ul>
+    
+  </div>
+  <div class="contact sidenav">
+    <h2>About Me</h2>
+
+  </div>
+</section>
 
   <footer>
     <h2>
