edited sidebars, contact links, and directory name

--- a/02-Challenge/index.html
+++ b/02-Challenge/index.html
@@ -25,7 +25,7 @@
               <a href="#projects">My Projects</a>
             </li>
             <li>
-              <a href="#">Contact</a>
+              <a href="#contact">Contact</a>
             </li>
           </ul>
         </nav>
@@ -92,15 +92,15 @@
   <section class="contact" id="contact">
     <div class="contact card">
     <ul>
-      <a href"#"><li>(812) 719-3934</li></a>
+      <a href="tel:8127193934"><li>Phone</li></a>
       <a href="mailto:aumcintyre@gmail.com"><li>Email</li></a>
-      <a href"#"><li>LinkedIn</li></a>
-      <a href"#"><li>GitHub</li></a>
+      <a href="https://www.linkedin.com/in/aumcintyre/"><li>LinkedIn</li></a>
+      <a href="https://github.com/aumcintyre/"><li>GitHub</li></a>
     </ul>
     
   </div>
   <div class="contact sidenav">
-    <h2>About Me</h2>
+    <h2>Contact</h2>
 
   </div>
 </section>
