removed duplicate readme and consolidated CSS

--- a/02-Challenge/index.html
+++ b/02-Challenge/index.html
@@ -35,13 +35,16 @@
   </header>
 
   <div class="titleImage"></div>
-  
+
   <hr>
 
   <section class="aboutMe" id="aboutMe">
-      <div class="aboutMe card1">
-      <h1>Welcome to my portfolio! My name is Austin McIntyre and I'm currently pursuing a change in careers. I am participating in the Northwestern Coding Bootcamp to supplement my own learning as I pursue my end goal of becoming a full-stack web developer. For the time being, I work as a Health/PE Teacher in Chicago, IL. If you would like to get in touch, please see the 'Contact' portion of this page! </h1>
-        <img src="/Assets/images/greetings.png">
+    <div class="aboutMe card1">
+      <h1>Welcome to my portfolio! My name is Austin McIntyre and I'm currently pursuing a change in careers. I am
+        participating in the Northwestern Coding Bootcamp to supplement my own learning as I pursue my end goal of
+        becoming a full-stack web developer. For the time being, I work as a Health/PE Teacher in Chicago, IL. If you
+        would like to get in touch, please see the 'Contact' portion of this page! </h1>
+      <img src="/Assets/images/greetings.png">
     </div>
     <div class="aboutMe sidenav">
       <h2>About Me</h2>
@@ -51,35 +54,30 @@
 
   <hr>
 
-<!-- PROJECT SECTION -->
+  <!-- PROJECT SECTION -->
 
   <section class="projects" id="projects">
 
     <a href="https://aumcintyre.github.io/Homework-1/" class="projects card1">
       <h1>Horiseon Webpage</h1>
-    </div>
+      </div>
     </a>
-    
-    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card2">
+    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card2"
+      style="background-image: url(/Assets/images/portfolio-screenshot.png);">
       <h1>Personal Portfolio</h1>
     </a>
-
-
-    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card3">
+    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card2"
+      style="background-image: url(/Assets/images/rhcp.jpg);">
       <h1>RHCP Fan Site</h1>
     </a>
-
-
-
-    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card4">
+    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card2"
+      style="background-image: url(/Assets/images/st-andrews.jpg);">
       <h1>Even Par</h1>
     </a>
-
-
-    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card5">
+    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card2"
+      style="background-image: url(/Assets/images/survivor.jpg);">
       <h1>The Ultimate Survivor</h1>
     </a>
-
     <div class="projects sidenav">
       <h2>My Projects</h2>
     </div>
@@ -91,19 +89,27 @@
 
   <section class="contact" id="contact">
     <div class="contact card">
-    <ul>
-      <a href="tel:8127193934"><li>Phone</li></a>
-      <a href="mailto:aumcintyre@gmail.com"><li>Email</li></a>
-      <a href="https://www.linkedin.com/in/aumcintyre/"><li>LinkedIn</li></a>
-      <a href="https://github.com/aumcintyre/"><li>GitHub</li></a>
-    </ul>
-    
-  </div>
-  <div class="contact sidenav">
-    <h2>Contact</h2>
+      <ul>
+        <a href="tel:8127193934">
+          <li>Phone</li>
+        </a>
+        <a href="mailto:aumcintyre@gmail.com">
+          <li>Email</li>
+        </a>
+        <a href="https://www.linkedin.com/in/aumcintyre/">
+          <li>LinkedIn</li>
+        </a>
+        <a href="https://github.com/aumcintyre/">
+          <li>GitHub</li>
+        </a>
+      </ul>
 
-  </div>
-</section>
+    </div>
+    <div class="contact sidenav">
+      <h2>Contact</h2>
+
+    </div>
+  </section>
 
   <footer>
     <h2>
