--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <link rel="icon" type="image/x-icon"
     href="https://cdn.shopify.com/s/files/1/1012/9648/files/8391210.gif?3646094131027364212">
-  <link rel="stylesheet" href="/Assets/css/style.css">
+  <link rel="stylesheet" href="./Assets/css/style.css">
   <title>Austin McIntyre's Portfolio</title>
 </head>
 
