--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </li>
           </ul>
         </nav>
-        <img src="/Assets/images/bitmoji-icon.png" class="bitmoji" />
+        <img src="./Assets/images/bitmoji-icon.png" class="bitmoji" />
       </div>
     </div>
   </header>
@@ -44,7 +44,7 @@
         participating in the Northwestern Coding Bootcamp to supplement my own learning as I pursue my end goal of
         becoming a full-stack web developer. For the time being, I work as a Health/PE Teacher in Chicago, IL. If you
         would like to get in touch, please see the 'Contact' portion of this page! </h1>
-      <img src="/Assets/images/greetings.png">
+      <img src="./Assets/images/greetings.png">
     </div>
     <div class="aboutMe sidenav">
       <h2>About Me</h2>
@@ -63,19 +63,19 @@
       </div>
     </a>
     <a href="https://aumcintyre.github.io/Homework-1/" class="projects card2"
-      style="background-image: url(/Assets/images/portfolio-screenshot.png);">
+      style="background-image: url(./Assets/images/portfolio-screenshot.png);">
       <h1>Personal Portfolio</h1>
     </a>
     <a href="https://aumcintyre.github.io/Homework-1/" class="projects card2"
-      style="background-image: url(/Assets/images/rhcp.jpg);">
+      style="background-image: url(./Assets/images/rhcp.jpg);">
       <h1>RHCP Fan Site</h1>
     </a>
     <a href="https://aumcintyre.github.io/Homework-1/" class="projects card2"
-      style="background-image: url(/Assets/images/st-andrews.jpg);">
+      style="background-image: url(./Assets/images/st-andrews.jpg);">
       <h1>Even Par</h1>
     </a>
     <a href="https://aumcintyre.github.io/Homework-1/" class="projects card2"
-      style="background-image: url(/Assets/images/survivor.jpg);">
+      style="background-image: url(./Assets/images/survivor.jpg);">
       <h1>The Ultimate Survivor</h1>
     </a>
     <div class="projects sidenav">
