changed visited link color

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <section class="projects" id="projects">
 
-    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card1">
+    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card1" style="background-image: url(./Assets/images/digital-marketing-meeting.jpg)">
       <h1>Horiseon Webpage</h1>
       </div>
     </a>
