updated project card links

--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
       <h1>Horiseon Webpage</h1>
       </div>
     </a>
-    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card2"
-      style="background-image: url(./Assets/images/portfolio-screenshot.png);">
+    <a href="https://aumcintyre.github.io/Personal-Portfolio/" class="projects card2"
+      style="background-image: url(./Assets/images/Confidence.jpg);">
       <h1>Personal Portfolio</h1>
     </a>
-    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card2"
+    <a href="https://github.com/aumcintyre/" class="projects card2"
       style="background-image: url(./Assets/images/rhcp.jpg);">
       <h1>RHCP Fan Site</h1>
     </a>
-    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card2"
+    <a href="https://github.com/aumcintyre/" class="projects card2"
       style="background-image: url(./Assets/images/st-andrews.jpg);">
       <h1>Even Par</h1>
     </a>
-    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card2"
+    <a href="https://github.com/aumcintyre/" class="projects card2"
       style="background-image: url(./Assets/images/survivor.jpg);">
       <h1>The Ultimate Survivor</h1>
     </a>
