changed website title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/x-icon"
     href="https://cdn.shopify.com/s/files/1/1012/9648/files/8391210.gif?3646094131027364212">
   <link rel="stylesheet" href="./Assets/css/style.css">
-  <title>Austin McIntyre's Portfolio</title>
+  <title>Austin's Portfolio</title>
 </head>
 
 
