added group project to page

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
   <section class="projects" id="projects">
 
-    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card1" style="background-image: url(./Assets/images/digital-marketing-meeting.jpg)">
-      <h1>Horiseon Webpage</h1>
+    <a href="https://project1team1.github.io/varistascafe/" class="projects card1" style="background-image: url(./Assets/images/demo.png)">
+      <h1>Varistas Project</h1>
       </div>
     </a>
-    <a href="https://aumcintyre.github.io/Personal-Portfolio/" class="projects card2"
-      style="background-image: url(./Assets/images/Confidence.jpg);">
-      <h1>Personal Portfolio</h1>
+    <a href="https://aumcintyre.github.io/Homework-1/" class="projects card2"
+      style="background-image: url(./Assets/images/digital-marketing-meeting.jpg);">
+      <h1>Horiseon Webpage</h1>
     </a>
     <a href="https://github.com/aumcintyre/" class="projects card2"
       style="background-image: url(./Assets/images/rhcp.jpg);">
